--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon server.js",
+    "start-prod":"NODE_ENV=production nodemon server.js"
   },
   "keywords": [],
   "author": "",
