--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "lawconnectindia",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://127.0.0.1:5000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
