--- a/Server/package.json
+++ b/Server/package.json
@@ -22,9 +22,12 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.4",
+    "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
