--- a/Server/package.json
+++ b/Server/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
