--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
@@ -30,6 +31,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.8",
+    "promisify": "^0.0.3",
+    "stripe": "^14.14.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
