--- a/Server/package.json
+++ b/Server/package.json
@@ -33,6 +33,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
     "promisify": "^0.0.3",
+    "slugify": "^1.6.6",
     "stripe": "^14.14.0",
     "validator": "^13.11.0"
   },
